Bug 18890 - xserver faults during keyboard setup
Summary: xserver faults during keyboard setup
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/Keyboard (show other bugs)
Version: git
Hardware: x86-64 (AMD64) FreeBSD
: medium blocker
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-04 07:40 UTC by vehemens
Modified: 2008-12-18 02:36 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg.conf (4.50 KB, text/plain)
2008-12-04 10:20 UTC, vehemens
no flags Details
Xorg.0.log (35.12 KB, text/plain)
2008-12-04 10:29 UTC, vehemens
no flags Details
patch for xf86Init.c (562 bytes, patch)
2008-12-06 18:47 UTC, vehemens
no flags Details | Splinter Review
requested backtrace (1.11 KB, text/plain)
2008-12-07 12:51 UTC, vehemens
no flags Details

Description vehemens 2008-12-04 07:40:16 UTC
The latest git code (as of this weekend) crashes due to a memory fault.  This is on a 64 bit system.

What's interesting is that it worked before and after the upgrade to the latest git, then failed after a cold boot.

Also after a minor xserver update, the keyboard auto-repeated with 9's, then went back to old behavior after a warm boot.

II) XINPUT: Adding extended input device "Mouse0" (type: MOUSE)
(**) Mouse0: (accel) keeping acceleration scheme 1
(**) Mouse0: (accel) filter chain progression: 2.00
(**) Mouse0: (accel) filter stage 0: 20.00 ms
(**) Mouse0: (accel) set acceleration profile 0
(II) Mouse0: SetupAuto: hw.iftype is 4, hw.model is 0
(II) Mouse0: SetupAuto: protocol is SysMouse
(**) Option "CoreKeyboard"
(**) Keyboard0: always reports core events
(**) Option "Protocol" "standard"
(**) Keyboard0: Protocol: standard
(**) Option "AutoRepeat" "500 30"
(**) Option "XkbRules" "xorg"
(**) Keyboard0: XkbRules: "xorg"
(**) Option "XkbModel" "pc105"
(**) Keyboard0: XkbModel: "pc105"
(**) Option "XkbLayout" "us"
(**) Keyboard0: XkbLayout: "us"
(**) Option "CustomKeycodes" "off"
(**) Keyboard0: CustomKeycodes disabled
(II) XINPUT: Adding extended input device "Keyboard0" (type: KEYBOARD)

Fatal server error:
Caught signal 11.  Server aborting
Comment 1 vehemens 2008-12-04 10:20:41 UTC
Created attachment 20815 [details]
xorg.conf
Comment 2 vehemens 2008-12-04 10:29:37 UTC
Created attachment 20816 [details]
Xorg.0.log

Server build is a local distribution using git master commit:
2008-12-03 07:43:34 (GMT)
49f77fff1495c0a2050fb18f9b1fc627839bbfc2   
Rework symbol visibility for easier maintenance
Comment 3 Peter Hutterer 2008-12-04 14:12:49 UTC
Is it possible to get a backtrace of the fault? This way it's a bit hard to
tell where it's blowing up.
Does the same error happen when you have AllowEmptyInput set to "on"?
Comment 4 vehemens 2008-12-06 18:47:31 UTC
Created attachment 20861 [details] [review]
patch for xf86Init.c

Need to initialize the event queue prior to adding an input device as adding an input device can cause an event.

Not an expert here, but looking at the code, it appears that there is more then one path the device initialization can take, so this problem may occur on other paths.
Comment 5 vehemens 2008-12-07 12:51:37 UTC
Created attachment 20873 [details]
requested backtrace

Didn't get your email request for some reason.  But anyway, here is the backtrace after backing the patch out.

If I set AllowEmptyInput to "on" and hal is enabled, it comes up with no devices.

There is a preliminary hal patch intended for use with the FreeBSD xorg 7.4 update, but I haven't tried it yet.
Comment 6 Peter Hutterer 2008-12-18 02:36:21 UTC
Fixed with 39db182b637041255ed6dac739ff77c8e4e07c30. Thanks for the report!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.